# trading_system

./: .claudeignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  implementation_plan.md  prd.md  pyproject.toml  task.md
configs/: base.yaml  krx_csv.yaml
examples/: pattern_train_payload.json  sample_backtest.yaml  sample_backtest_krx.yaml  sample_live_kis.yaml  strategy_profile_payload.json
frontend/: README.md  dashboard.html  eslint.config.mjs  index.html  package-lock.json  package.json  pattern.html  patterns.html  playwright.config.ts  run.html  runs.html  strategies.html  vite.config.ts
prd/: phase_10_implementation_plan.md  phase_10_prd.md  phase_10_task.md  phase_11_implementation_plan.md  phase_11_prd.md  phase_11_task.md  phase_12_implementation_plan.md  phase_12_prd.md  phase_12_task.md  phase_13_implementation_plan.md  phase_13_prd.md  phase_13_task.md  phase_14_implementation_plan.md  phase_14_prd.md  phase_14_task.md  phase_15_implementation_plan.md  phase_15_prd.md  phase_15_task.md  phase_16_implementation_plan.md  phase_16_prd.md  phase_16_task.md  phase_17_implementation_plan.md  phase_17_prd.md  phase_17_task.md  phase_18_implementation_plan.md  phase_18_prd.md  phase_18_task.md  phase_3_5_implementation_plan.md  phase_3_5_prd.md  phase_3_5_task.md  phase_3_implementation_plan.md  phase_3_task.md  phase_4_implementation_plan.md  phase_4_prd.md  phase_4_task.md  phase_5_codex_version_review_from_claude.md  phase_5_implementation_plan.md  phase_5_prd.md  phase_5_task.md  phase_6_implementation_plan.md  (+25 more)
scripts/: backtest_worker_smoke.py  bootstrap.sh  check_supabase_backtest_jobs.py  (+2 more)
(+364 files in other folders)
