[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
version = "0.1.0"
description = "Starter scaffold for a modular Python trading system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116",
  "psycopg[binary]>=3.1",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "sse-starlette>=1.6",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "smoke: fast CI smoke tests",
  "extended: broader integration and failure-path tests",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
